setting env variables

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 MONGO_URL="mongodb://localhost:27017"
 Email="vintageragsonline@gmail.com"
 pass="asir crdc qyxu veje"
+GOOGLE_CLIENT_ID="1027561512725-6qlod48k5s2ufm46jitu38q7fiakiphr.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET='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'
+PORT=8000
