--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
+    "puppeteer": "^22.5.0",
     "razorpay": "^2.9.2",
     "shortid": "^2.2.16"
   },
