--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,5 @@ jobs:
         run: |
           touch .env
           echo "${{ secrets.DOT_ENV }}" > .env
-
+      - run: pm2 restart app.js
+        
